# xylex-charts

./: .env  Cargo.toml  README.md  test.csv
src/: main.rs
src/data/: csv_parser.rs  mod.rs
src/render_engine/: candle.rs  core.rs  mod.rs
src/utils/: format_normalizer.rs  mod.rs  struct_model.rs
